--- a/addons/auth_totp/views/templates.xml
+++ b/addons/auth_totp/views/templates.xml
@@ -27,8 +27,8 @@
                         <input type="checkbox" name="remember" id="switch-remember" value="1"/>
                         <label for="switch-remember">Don't ask again on this device</label>
                     </div>
-                        <div t-attf-class="clearfix oe_login_buttons text-center mb-1">
-                            <button type="submit" class="btn btn-primary btn-block">
+                        <div t-attf-class="clearfix oe_login_buttons text-center d-grid mb-1">
+                            <button type="submit" class="btn btn-primary">
                                 Login
                             </button>
                         </div>
