--- a/addons/website_event_booth/views/event_booth_registration_templates.xml
+++ b/addons/website_event_booth/views/event_booth_registration_templates.xml
@@ -54,8 +54,8 @@
                     <span class="o_wbooth_registration_error_message"/>
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-6 offset-sm-3 mt-5">
-                        <button type="submit" class="btn btn-primary btn-block font-weight-bold o_wbooth_registration_confirm">
+                    <div class="d-grid col-sm-6 offset-sm-3 mt-5">
+                        <button type="submit" class="btn btn-primary font-weight-bold o_wbooth_registration_confirm">
                             Book my Booths
                         </button>
                     </div>
