--- a/addons/website_sale_slides/views/website_slides_templates.xml
+++ b/addons/website_sale_slides/views/website_slides_templates.xml
@@ -121,7 +121,7 @@
                     <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()" />
                     <input type="hidden" class="product_id" name="product_id" t-att-value="channel.product_id.id"/>
                     <a id="add_to_cart" role="button" href="#"
-                       class="btn btn-primary btn-block js_check_product o_js_add_to_cart a-submit"
+                       class="btn btn-primary d-block js_check_product o_js_add_to_cart a-submit"
                        data-animation-selector=".o_wslides_course_pict">
                         <i class="fa fa-shopping-cart"></i> Add to Cart
                     </a>
