[IMP] base{_import}: warns user when importing data in the wrong lang
Warns the user when the detected language of the file imported is different
than the user configured language. Indeed, the matching is done in the user
configured language but the user often doesn't realize that's the cause. This
warning will help the user to identify the cause more easily.

Note that we display the warning even if the system is able to match the
headers because mismatch language can also cause error when importing the data
(for example for country name expressed in the wrong language).

Technical note:
- the detection of the language of the imported file is based on the
translation in the table ir_translation. It will only succeed if the terms used
in the imported file are present in that table. As the exportation is based on
that table, it should be often the case.
- the detection uses a query based on a field which is not indexed but it is
done in one query (for all terms ~ header of the file imported) and limited
to the model type (which is indexed)

Task-2858014

--- a/addons/base_import/static/src/legacy/scss/base_import.scss
+++ b/addons/base_import/static/src/legacy/scss/base_import.scss
@@ -136,6 +136,15 @@
             @extend .text-danger;
         }
     }
+    .oe_import_lang_warn {
+        a {
+            text-decoration: underline;
+        }
+        a:hover {
+            cursor:pointer;
+            text-decoration: underline;
+        }
+    }
 
     /* ------------- THE CSV TABLE ------------ */
 
