[REF] web: BS5: adapt `opacity-X-hover` classes to class utilities
This can be done by using BS5 API.

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/web/static/src/legacy/scss/import_bootstrap.scss
+++ b/addons/web/static/src/legacy/scss/import_bootstrap.scss
@@ -64,5 +64,7 @@ $theme-colors: $-tmp;
 @import "helpers";
 
 // Utilities
-@import "utilities/api";
+// Moved into bundle after bs_utilities_custom.scss file to allow to extend
+// the utilities
+// @import "utilities/api";
 // scss-docs-end import-stack
