[IMP] sale_(project),hr_timesheet: generic UX improvement for project
Purpose of this commit to improve generic usage of project app.

So in this commit done following changes:
 - add the following filters for project.update search view
 - display 'due mm/dd/yyyy' in red if the deadline is in the
   past and the milestone hasn't been reached yet for milestone section
 - add an 'x Milestones' stat button that should open a list view of all of
   the Milestones that are linked to an SOL of this SO for sale.order form view
 - add an 'unread messages' filter with separated from other filter
 - rename 'create' into 'create project for project wizard
 - change to "Create projects to organise your tasks. Define a different workflow
   for each project." for project.project action helper

task-2864875

--- a/addons/project/views/project_views.xml
+++ b/addons/project/views/project_views.xml
@@ -776,7 +776,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//group" position="after">
                     <footer>
-                        <button string="Create" name="action_view_tasks" type="object" class="btn-primary o_open_tasks" data-hotkey="q"/>
+                        <button string="Create Project" name="action_view_tasks" type="object" class="btn-primary o_open_tasks" data-hotkey="q"/>
                         <button string="Discard" class="btn-secondary" special="cancel" data-hotkey="z"/>
                     </footer>
                 </xpath>
@@ -972,7 +972,7 @@
                     No projects found. Let's create one!
                 </p>
                 <p>
-                    Create projects to organize your tasks and define a different workflow for each project.
+                    Create projects to organize your tasks. Define a different workflow for each project.
                 </p>
             </field>
         </record>
