--- a/addons/web/static/src/search/search_panel/search_panel.scss
+++ b/addons/web/static/src/search/search_panel/search_panel.scss
@@ -63,7 +63,7 @@ $o-searchpanel-filter-default-color: #D59244;
         padding: 0;
 
         .list-group-item {
-            padding: 0 0 0 $custom-control-gutter;
+            padding: 0 0 0 map-get($gutters, 2);
             margin-bottom: $o-searchpanel-p-tiny*0.5;
         }
 
