[REF] event, web: BS5:  $emphasized-link-hover-darken-percentage -> $link-shade-percentage
In BS5 `$emphasized-link-hover-darken-percentage` was removed, so we use
the new variable but we restore some BS4 values:

- 15% as in BS4
- remove the underline on links as in BS4

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
@@ -58,7 +58,9 @@ $body-color: $o-main-text-color !default;
 // Style anchor elements.
 
 $link-color: $o-main-link-color !default;
+$link-decoration: none !default;
 $link-hover-decoration: none !default;
+$link-shade-percentage: 15% !default;
 
 // Muted
 //
