--- a/addons/web/static/src/legacy/scss/bs_mixins_overrides_backend.scss
+++ b/addons/web/static/src/legacy/scss/bs_mixins_overrides_backend.scss
@@ -22,7 +22,7 @@
 // It prioritizes the '$o-theme-text-colors' map and fallbacks to default.
 //------------------------------------------------------------------------------
 @mixin text-emphasis-variant($parent, $color) {
-  $-hover: $emphasized-link-hover-darken-percentage;
+  $-hover: $link-shade-percentage;
 
   // Check for the color name in '$theme-colors'.
   $color-name: null;
