--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -13,7 +13,7 @@
     }
 }
 
-@include media-breakpoint-between(lg, xl, $o-extra-grid-breakpoints) {
+@include media-breakpoint-up(lg, $o-extra-grid-breakpoints) {
     .o_form_view .o_form_sheet .o_notebook .tab-content .tab-pane .o_mail_body {
         // cancel the padding of the form_sheet when breakpoints are reached
         margin-left: -$o-sheet-cancel-hpadding*2;
