[REF] *: BS5: remove hover mixins usage (due to BS5 removal)
* = mail, survey, web, web_editor, website, website_event, website_mail

removed mixins:
* hover
* plain-hover-focus
* hover-focus

These mixins are now replaced by their CSS equivalent.

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/survey/static/src/scss/survey_templates_results.scss
+++ b/addons/survey/static/src/scss/survey_templates_results.scss
@@ -20,7 +20,7 @@
         // Dropdown adapted from event templates to get a coherent styling
         .dropdown-toggle {
             text-align: left;
-            @include hover-focus {
+            &:hover, &:focus {
                 text-decoration: none;
             }
             &:after {
