--- a/addons/website/static/src/snippets/s_mega_menu_images_subtitles/000.scss
+++ b/addons/website/static/src/snippets/s_mega_menu_images_subtitles/000.scss
@@ -5,7 +5,7 @@
     }
 
     .nav-link {
-        @include hover-focus {
+        &:hover, &:focus {
             background: rgba(0, 0, 0, .05);
         }
     }
