--- a/addons/website_mail/static/src/css/website_mail.scss
+++ b/addons/website_mail/static/src/css/website_mail.scss
@@ -13,7 +13,7 @@
             transition: opacity 0.3s ease;
         }
 
-        @include hover-focus () {
+        &:hover, &:focus {
             small {
                 transition-duration: 1s;
                 opacity: 1;
