--- a/addons/web/static/src/libs/bootstrap/mixins_forwardport.scss
+++ b/addons/web/static/src/libs/bootstrap/mixins_forwardport.scss
@@ -14,7 +14,7 @@
     }
     @if $emphasized-link-hover-darken-percentage != 0 {
         a#{$parent} {
-            @include hover-focus {
+            &:hover, &:focus {
                 color: darken($color, $emphasized-link-hover-darken-percentage) !important;
             }
         }
