--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -671,7 +671,7 @@ blockquote {
             &, h6 { // Quick fix: sometimes we use h6 in dropdowns
                 color: $dropdown-link-color !important;
 
-                @include hover-focus {
+                &:hover, &:focus {
                     color: $dropdown-link-hover-color !important;
                 }
             }
@@ -735,7 +735,7 @@ blockquote {
             a:not(.btn), .btn-link {
                 color: auto-contrast($-link-color, $-bg-color, 'o-cc#{$index}-link');
 
-                @include hover {
+                &:hover {
                     color: auto-contrast($-link-hover-color, $-bg-color, 'o-cc#{$index}-link');
                 }
             }
@@ -780,7 +780,7 @@ blockquote {
                         @include gradient-bg($-btn-primary-color);
                         color: color-yiq($-btn-primary-color) !important;
 
-                        @include hover-focus {
+                        &:hover, &:focus {
                             color: color-yiq($-btn-primary-color) !important;
                         }
                     }
