--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -68,12 +68,10 @@
                                     <group string="States">
                                         <field name="blocked"/>
                                     </group>
-                                    <group string="Analytic" groups="analytic.group_analytic_accounting,analytic.group_analytic_tags">
+                                    <group string="Analytic" groups="analytic.group_analytic_accounting">
                                         <field name="analytic_account_id" groups="analytic.group_analytic_accounting"
                                             domain="['|', ('company_id', '=', company_id), ('company_id', '=', False)]"
                                             readonly="1"/>
-                                        <field name="analytic_tag_ids" groups="analytic.group_analytic_tags"
-                                            widget="many2many_tags"/>
                                     </group>
                                 </group>
                             </page>
@@ -876,11 +874,6 @@
                                                domain="['|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]"
                                                groups="analytic.group_analytic_accounting"
                                                optional="show"/>
-                                        <field name="analytic_tag_ids"
-                                               domain="['|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]"
-                                               groups="analytic.group_analytic_tags"
-                                               optional="show"
-                                               widget="many2many_tags"/>
                                         <field name="quantity" optional="show"/>
                                         <field name="product_uom_category_id" invisible="1"/>
                                         <field name="product_uom_id" string="UoM" groups="uom.group_uom" optional="show"/>
@@ -1015,7 +1008,6 @@
                                                 <field name="currency_id" invisible="1"/>
                                             </group>
                                             <group>
-                                                <field name="analytic_tag_ids" groups="analytic.group_analytic_tags" widget="many2many_tags"/>
                                                 <field name="account_id" options="{'no_create': True}" domain="[('company_id', '=', company_id)]" context="{'partner_id': partner_id, 'move_type': parent.move_type}"/>
                                                 <field name="tax_ids" widget="many2many_tags"/>
                                                 <field name="analytic_account_id" groups="analytic.group_analytic_accounting"/>
@@ -1075,11 +1067,6 @@
                                                optional="hide"
                                                domain="['|', ('company_id', '=', parent.company_id), ('company_id', '=', False)]"
                                                groups="analytic.group_analytic_accounting"
-                                               attrs="{'invisible': [('display_type', 'in', ('line_section', 'line_note'))]}"/>
-                                        <field name="analytic_tag_ids"
-                                               optional="show"
-                                               groups="analytic.group_analytic_tags"
-                                               widget="many2many_tags"
                                                attrs="{'invisible': [('display_type', 'in', ('line_section', 'line_note'))]}"/>
                                         <field name="date_maturity"
                                                optional="hide"
@@ -1172,7 +1159,6 @@
                                         <field name="partner_id" domain="['|', ('parent_id', '=', False), ('is_company', '=', True)]"/>
                                         <field name="name"/>
                                         <field name="analytic_account_id" groups="analytic.group_analytic_accounting"/>
-                                        <field name="analytic_tag_ids" groups="analytic.group_analytic_tags" widget="many2many_tags"/>
                                         <field name="amount_currency" groups="base.group_multi_currency"/>
                                         <field name="company_currency_id" invisible="1"/>
                                         <field name="company_id" invisible="1"/>
