--- a/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
@@ -96,6 +96,7 @@ $grid-gutter-width: $o-horizontal-padding * 2 !default;
 // Define common padding and border radius sizes and more.
 
 $border-radius: $o-border-radius !default;
+$border-radius-sm: $o-border-radius-sm !default;
 $border-radius-lg: $o-border-radius-lg !default;
 $border-color: $o-gray-300 !default;
 
