--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -1886,6 +1886,10 @@
 </template>
 
 <template id="language_selector" inherit_id="portal.language_selector">
+    <xpath expr="//t[@t-nocache]" position="attributes">
+        <attribute name="t-nocache-flags">flags</attribute>
+    </xpath>
+
     <xpath expr="//t[@t-set='active_lang']" position="before">
         <t t-if="lang not in (lg[0] for lg in languages)">
             <t t-set="lang" t-value="website.default_lang_id.code"/>
