--- a/addons/account/views/account_portal_templates.xml
+++ b/addons/account/views/account_portal_templates.xml
@@ -38,7 +38,7 @@
                     <th>Invoice #</th>
                     <th>Invoice Date</th>
                     <th class='d-none d-md-table-cell'>Due Date</th>
-                    <th/>
+                    <th class="text-center">Status<th/>
                     <th class="text-right">Amount Due</th>
                 </tr>
             </thead>
