--- a/addons/web/static/src/libs/bootstrap/utilities_custom.scss
+++ b/addons/web/static/src/libs/bootstrap/utilities_custom.scss
@@ -50,6 +50,18 @@ $utilities: map-merge(
             class: rounded-start,
             values: $rounded-sizes,
         ),
+        "width": map-merge(
+            map-get($utilities, "width"),
+            (
+                responsive: true,
+            ),
+        ),
+        "height": map-merge(
+            map-get($utilities, "height"),
+            (
+                responsive: true,
+            ),
+        ),
     )
 );
 
