[IMP] mail: improve EmojiPicker (step 1)
Emoji picker now has a bar to filter
emojis per category.

Task-2898475

closes odoo/odoo#94646

Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/components/emoji_picker_view/emoji_picker_view.scss
+++ b/addons/mail/static/src/components/emoji_picker_view/emoji_picker_view.scss
@@ -1,9 +1,3 @@
-// ------------------------------------------------------------------
-// Layout
-// ------------------------------------------------------------------
-
 .o_EmojiPickerView {
-    // Could be replaced by "d-grid" class after migration to BS5
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
+    height: Min(80vh, 340px);
 }
