--- a/addons/web/static/src/views/kanban/kanban_dashboard.scss
+++ b/addons/web/static/src/views/kanban/kanban_dashboard.scss
@@ -23,6 +23,10 @@
         // ------- Dropdown toggle & menu -------
         $o-kanban-manage-toggle-height: 35px;
 
+        .o_dropdown_kanban {
+            visibility: visible;
+        }
+
         .o_kanban_manage_toggle_button {
             @include o-kanban-dropdown($o-kanban-dashboard-hpadding);
             @include o-position-absolute(0, 0);
